<resources>
    <string name="app_name">Strovo</string>

    <!-- Accueil  -->
    <string name="filtres">Filtres</string>
    <string name="enregistrerParcours">Enregistrer un parcours</string>
    <string name="aucunParcours">Aucun parcours trouvé.</string>
    <string name="errParcoursNameEmpty">Veuillez saisir un nom pour le parcours.</string>

    <!-- Connexion / Inscription  -->
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="connecter">Se connecter</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>

    <!-- Course Synthèse  -->
    <string name="retourAccueil">Retourner à l\'accueil</string>
    <string name="distance">Distance : %s m</string>
    <string name="distanceKm">Distance : %s km %s m</string>
    <string name="denivele">Dénivelé : %s m</string>
    <string name="temps">Temps : %s</string>
    <string name="vitesse">Vitesse : %s km/h</string>
    <string name="errRecupInfosParcours">Impossible de récupérer les informations associés au parcours</string>

    <!-- Map  -->
    <string name="erreurLancementParcours">Erreur lancement parcours</string>
    <string name="erreurArretParcours">Pour arrêter un parcours, maintenez le clic sur le bouton pendant plus de 3 secondes.</string>

    <!-- Menus Modification -->
    <string name="modifParcours">Modifier le parcours</string>
    <string name="messageConfirmationModification">Etes-vous sûr de vouloir modifier ce parcours</string>
    <string name="nouvelleDescription">Ma nouvelle description</string>
    <string name="modifier">Valider nouvelle description</string>
    <string name="supprimer">Supprimer parcours</string>
    <string name="retour">Retour</string>

    <!-- Popup filtre -->
    <string name="titreFiltres">Filtres</string>
    <string name="inputMois">Mois</string>
    <string name="dateDebut">01/01/2024</string>
    <string name="dateFin">01/02/2024</string>
    <string name="rechercher">Rechercher</string>

    <!-- Popup lancer course -->
    <string name="titreLancerCourse">Etes vous sûr de vouloir lancer une course ?</string>
    <string name="inputNom">Nom</string>

    <!-- Popup point d'interet -->
    <string name="titrePointInteret">Point d’interet</string>
    <string name="inputLibelle">Libellé</string>
    <string name="inputDescription">Description</string>
    <string name="ajouterPointInteret">Ajouter un point d\'interet</string>
    <string name="arreter">Arreter</string>
    <string name="errPointNameEmpty">Veuillez saisir un nom pour le point d\'intêret.</string>

    <!-- Popup permissions-->
    <string name="titrePopupPermissions">Autorisations nécessaires</string>
    <string name="descriptionPopupPermissions">Cette fonctionnalité nécessite des autorisations pour accès à votre localisation.</string>

    <!-- Boutons communs-->
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="fermer">Fermer</string>

    <!-- Messages -->
    <string name="errConnexion">Identifiants incorrects</string>
    <string name="errInscriptionFirstname">Le prénom doit faire entre %d et %d caractères</string>
    <string name="errInscriptionLastname">Le nom doit faire entre %d et %d caractères</string>
    <string name="errInscriptionEmail">L\'adresse mail doit être valide et ne pas dépasser %d caractères</string>
    <string name="errInscriptionPassword">Le mot de passe doit faire entre %d et %d caractères</string>
    <string name="errInscriptionConflict">Cet adresse mail est déjà utilisée</string>

    <string name="err">Une erreur s\'est produite</string>
</resources>