<?xml version="1.0" encoding="utf-8"?><!-- Boite de dialogue permettant d'appliquer des filtres sur une
    recherche de course -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titreFiltres"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Du : "/>

        <EditText
            android:id="@+id/inputDureeMin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/dateDebut"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" au : "/>

        <EditText
            android:id="@+id/inputDureeMax"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/dateFin"
            android:focusable="false"/>

    </LinearLayout>




    <Button
        android:id="@+id/btnRechercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rechercher" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00C60F02"
        android:text="@string/annuler"
        android:textColor="#F44336"
        app:strokeColor="#F44336"
        app:strokeWidth="3px" />

</LinearLayout>
