<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="25dp">

    <ImageView
        android:layout_width="166dp"
        android:layout_height="223dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@android:drawable/editbox_background"
        android:height="50dp"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:maxLength="32"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/mot_de_passe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:height="50dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:maxLength="64"
        android:maxLines="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connecter"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:height="60dp"
        android:onClick="clicConnexion"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:height="60dp"
        android:backgroundTint="#00C60F02"
        android:onClick="clicInscription"
        android:text="@string/inscrire"
        android:textColor="#F44336"
        android:textSize="20sp"
        app:strokeColor="#F44336"
        app:strokeWidth="3px" />

</LinearLayout>