<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titreLancerCourse"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputCommentaire"
        android:inputType="text"
        android:maxLength="35"
        android:maxLines="1" />

    <EditText
        android:id="@+id/inputCommentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputCommentaire"
        android:inputType="text"
        android:maxLength="35"
        android:maxLines="1" />

    <Button
        android:id="@+id/confirmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/confirmer"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00C60F02"
        android:text="@string/annuler"
        android:textColor="#F44336"
        app:strokeColor="#F44336"
        app:strokeWidth="3px" />



</LinearLayout>
